<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="list_title">My Nanodegree Apps!</string>
    <string name="sporify_streamer">Sporify Streamer</string>
    <string name="football_scores_app">Football Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_readyer">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
