<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_title"
        android:id="@+id/title"
        android:layout_gravity="center" />

    <Button
        style="@style/GeneralButtons"
        android:text="@string/sporify_streamer"
        android:id="@+id/spotifyStreamerBtn"
        android:enabled="true"
        android:onClick="sendMessage" />

    <Space
        style="@style/Spaces" />

    <Button
        style="@style/GeneralButtons"
        android:text="@string/football_scores_app"
        android:id="@+id/footballScoresBtn"
        android:enabled="true"
        android:onClick="sendMessage" />
    <Space
        style="@style/Spaces" />

    <Button
        style="@style/GeneralButtons"
        android:text="@string/library_app"
        android:id="@+id/libraryBtn"
        android:enabled="true"
        android:onClick="sendMessage" />

    <Space
        style="@style/Spaces" />

    <Button
        style="@style/GeneralButtons"
        android:text="@string/build_it_bigger"
        android:id="@+id/buildItBiggerBtn"
        android:enabled="true"
        android:onClick="sendMessage" />

    <Space
        style="@style/Spaces" />

    <Button
        style="@style/GeneralButtons"
        android:text="@string/xyz_readyer"
        android:id="@+id/xyzReaderBtn"
        android:enabled="true"
        android:onClick="sendMessage"/>

    <Space
        style="@style/Spaces" />

    <Button
        style="@style/MyAppButton"
        android:text="@string/capstone"
        android:id="@+id/capstoneBtn"
        android:enabled="true"
        android:onClick="sendMessage" />

</LinearLayout>
